tp-rent/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tp-rent
  labels:
    name: tp-rent
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn-version: latest
