tp-rent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: tp-rent
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - tp.aarnihalinen.fi
      secretName: tls-secret
  rules:
    - host: tp.aarnihalinen.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
